# holmesgpt-catalyst

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md
.claude/: settings.json
.codebase-memory/: adr.md
charts/: README.md
charts/holmes-app/: Chart.yaml  values.yaml
charts/holmes-mcp/: Chart.yaml  values.yaml
charts/holmes-pulsar/: Chart.yaml  values.yaml
charts/holmes-sre/: Chart.yaml  README.md  bootstrap.sh  values.yaml
charts/holmes-yugabyte/: Chart.yaml  values.yaml
deploy/: bootstrap.sh
deploy/mcp-gateway/: README.md  clusterissuer.yaml  ingress-snmcp.yaml  ingress-yugabytedb.yaml
deploy/values/: argocd.yaml  monitoring.yaml  yugabyte.yaml
holmes-app/: app_holmes.py  holmes_config.yaml  pyproject.toml
holmes-app/.chainlit/: config.toml
holmes-app/public/: stylesheet.css
holmes-app/skills/api-gateway-latency-spike/: SKILL.md
holmes-app/skills/auth-service-crashloopbackoff/: SKILL.md
holmes-app/skills/checkout-api-imagepullbackoff/: SKILL.md
k8s/: secret.yaml.example
k8s/agents/: holmes-investigator-catalyst.yaml  holmes-investigator.yaml
k8s/alerts/: alertmanager-config.yaml  alertmanager-env-patch.yaml  pod-crashloopbackoff.yaml
k8s/components/: agent-memory.yaml  agent-registry.yaml  agent-workflow.yaml  llm-provider.yaml
k8s/grafana-dashboards/: api-gateway-overview.yaml  auth-service-overview.yaml
k8s/infra/: pulsar.yaml
k8s/jobs/: pulsar-seed.yaml  yugabytedb-seed.yaml
k8s/mcp-servers/: github-mcp.yaml  snmcp.yaml  (+1 more)
scripts/: build-yugabytedb-mcp.sh
setup/: argocd-apps.yaml  grafana-dashboards-app.yaml
(+29 files in other folders)
