[project]
name = "holmes-app"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "diagrid[holmesgpt]==0.4.2",
    "chainlit>=2.0.0",
]

[tool.uv]
prerelease = "allow"
# holmesgpt pins uvicorn<0.41, cachetools<6, mcp==1.25.0 — all conflict with
# diagrid[agent-core]'s floors. Override until holmesgpt relaxes these bounds.
override-dependencies = [
    "uvicorn>=0.41.0",
    "cachetools>=6.1.0,<8.0.0",
    "mcp==1.26.0",
]
